2005-04-28 Alain Magloire
	Patch from Devlin Steffler
	FIXED 84606- CDT needs to take advantage of background refresh of projects
	* src/org/eclipse/cdt/core/CCorePlugin.java

2005-04-21 Vladimir Hirsl
	Fix for PR 91964: Dom Indexer misses give a friend declaration for forward decls
	    Fixed detection of friend class/struct declaration.
	Fix for PR 92060: [DOM Indexer] for C projects only seems to do macros now
	    Taken a different approach by wrapping calls to IIndexerOutput in anticipation
	    of its soon change.
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CPPGenerateIndexerVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexerDOMSourceIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexerEncoderUtil.java
	+ index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexerOutputWrapper.java

2005-04-15 Vladimir Hirsl
	Fix for PR 91405: Search does not find declarations of printf
	Index entries form include files external to workspace were erroneously stored 
	under compilation unit's file id.
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexEncoderUtil.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/SourceIndexerRequestor.java

2005-04-11 Vladimir Hirsl
	Fix for PR 90193: Scanner faililng on Local/User paths as provided in Std. Make
	User specified include paths (through the UI) are now created with 
	isSystemInclude attribute set to true.
	
	* model/org/eclipse/cdt/core/model/CoreModel.java

2005-04-08 Vladimir Hirsl
	Added offset and length parameters for index entries.
	Refactoring of AbstractIndexer. Moved old parser specific stuff to the appropriate subclass.
	
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java